--- a/example/euroc/EuRoC_stereo.yaml
+++ b/example/euroc/EuRoC_stereo.yaml
@@ -63,6 +63,12 @@ Feature:
   ini_fast_threshold: 20
   min_fast_threshold: 7
 
+#=====================#
+# Tracking Parameters #
+#=====================#
+
+depth_threshold: 40
+
 #========================#
 # Initializer Parameters #
 #========================#
