--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
 build/
 devel/
 lib/
+dataset/
+vocab/
 .idea/
 cmake-build-debug/
 cmake-build-release/
 */.python-version
 *.user
+*~
 
 # Prerequisites
 *.d
